--- a/style.css
+++ b/style.css
@@ -220,6 +220,72 @@ z-index: 400s ease-in-out 0s;
         }
     .card-text {
         width: 40%;
+        letter-spacing: 1px;
+        color: rgb(109, 109, 109) ;
     }
 
-    
+    .card-wrapper {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+    }
+
+    .card-wrapper::before {
+        content: '';
+        position: absolute;
+        height: 100px;
+        width: 100px;
+        border-radius: 50%;
+        display: block;
+        border: 1px solid #ffffff;
+        opacity: 0;
+        transition: 0.5s ease-in-out;
+    }
+
+    .card-wrapper h2 {
+        font-size: 40px;
+        text-transform: uppercase;
+        letter-spacing: 4px;
+        margin: 0;
+        transition: 0.5s ease-in-out;
+    }
+
+    .card-wrapper p {
+        font-size: 0px;
+        text-transform: visible;
+        opacity: 0;
+        font-weight: bold;
+        text-transform: uppercase;
+        transition: 0.5s ease-in-out;
+    }
+
+    .card:hover {
+      filter: unset;  
+    }
+
+    .card:hover > .card-wrapper::before {
+        height: 200px;
+        width: 200px;
+        opacity: 1;
+    }
+
+    .card:hover > .card-wrapper p {
+        opacity: 1;
+        visibility: visible;
+        font-size: 14px;
+    }
+
+    /*Footer*/
+
+    .footer {
+        width: 100%;
+        height: 100px;
+        background-color: #60E1E0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #1E1E2A;
+    }
